Fixing spacing

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -21,3 +21,8 @@ $govuk-assets-path: '/govuk/assets/';
 tr:nth-child(even) {
   background: #f1f1f1;
 }
+
+.govuk-table__body th {
+  padding: 10px 10px 10px 5px;
+  vertical-align: middle;
+}
